fixed navbar alignment fixed first section

--- a/css/style.css
+++ b/css/style.css
@@ -10,4 +10,5 @@
     width: 100%;
     background-color:#1ABC9C ;
     color: white;
+    padding: 3em;
 }
